--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,10 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="phaser"></div>
-    <div id="root"></div>
+    <div id="container">
+      <div id="phaser"></div>
+      <div id="root"></div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
